--- a/lesson-7-function-recursion-сlosures/index.html
+++ b/lesson-7-function-recursion-сlosures/index.html
@@ -6,6 +6,7 @@
     <title>array</title>
   </head>
   <body>
+    <script src="data.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
