--- a/lesson-11-DOM-Events/index.html
+++ b/lesson-11-DOM-Events/index.html
@@ -6,6 +6,7 @@
     <title>array</title>
   </head>
   <body>
+    <div id="main"><p>Hello word</p></div>
     <script src="script.js"></script>
   </body>
 </html>
