--- a/lesson-8-function-сontext/index.html
+++ b/lesson-8-function-сontext/index.html
@@ -6,6 +6,8 @@
     <title>array</title>
   </head>
   <body>
+    <script src="man.js"></script>
+    <script src="car.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
