--- a/lesson-12-Events-part 2/index.html
+++ b/lesson-12-Events-part 2/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>array</title>
   </head>
   <body>
+    <div class="container">
+      <div class="category"></div>
+      <div class="product"></div>
+      <div class="details"></div>
+    </div>
+    <div class="result"></div>
+    <script src="data.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
